Now works on a fresh install of trixie